--- a/versions/v1_1_2/index.html
+++ b/versions/v1_1_2/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <title>Animation v1.1.1</title>
+    <title>Animation v1.1.2</title>
 </head>
 <body class="dotted-bg">
+    <div id="tbg"></div>
     <div class="container">
-        <div class="title">Game</div>
+        <div class="topbar">
+            <button class="fs" onclick="goFullscreen()"></button>
+        </div>
         <div class="game-container">
             <canvas></canvas>
             <div id="gameEditor">
@@ -18,10 +21,10 @@
                 <input type="text" id="objectPosY" placeholder="y">
                 <input type="text" id="objectSizeX" placeholder="w">
                 <input type="text" id="objectSizeY" placeholder="h">
-                <button style="grid-row: 4; grid-column: 1/2;" onclick="editor.shift(0)">&leftarrow;</button>
-                <button style="grid-row: 4; grid-column: 2/3;" onclick="editor.shift(1)">&rightarrow;</button>
-                <button style="grid-row: 5; grid-column: 0/1;" onclick="editor.shift(2)">&uparrow;</button>
-                <button style="grid-row: 5; grid-column: 2/3;" onclick="editor.shift(3)">&downarrow;</button>
+                <button style="grid-row: 4; grid-column: 1/2;" onclick="editor.translate(0)">&leftarrow;</button>
+                <button style="grid-row: 4; grid-column: 2/3;" onclick="editor.translate(1)">&rightarrow;</button>
+                <button style="grid-row: 5; grid-column: 0/1;" onclick="editor.translate(2)">&uparrow;</button>
+                <button style="grid-row: 5; grid-column: 2/3;" onclick="editor.translate(3)">&downarrow;</button>
                 <button style="grid-row: 7; grid-column: 1/3;" onclick="editor.apply()">Apply</button>
                 <button style="grid-row: 8; grid-column: 1/3;" onclick="editor.destroy()">Destroy</button>
                 <button style="grid-row: 9; grid-column: 1/3;" editor-mode onclick="editor.changeMode()">Mode: select</button>
@@ -36,8 +39,4 @@
         </div>
     </div>
 </body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> 8fa2ada (Test commit)
