--- a/versions/v1_1_3/index.html
+++ b/versions/v1_1_3/index.html
@@ -36,8 +36,8 @@
                     </div>
                     <div class="window" windowId="pauseMenu">
                         <div class="button-list">
-                            <button class="coolBtn" onclick="pause()">Resume</button>
-                            <button class="coolBtn" onclick="openWindow('shop')">Shop</button>
+                            <button class="coolBtn" onclick="exitWindow()">Resume</button>
+                            <button class="coolBtn" onclick="openWindow('shopMenu')">Shop</button>
                         </div>
                     </div>
                     <div class="window" windowId="shopMenu">
