--- a/versions/v1_2_0/index.html
+++ b/versions/v1_2_0/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <title>Animation v1.1.3</title>
+    <title>Animation v1.2.0</title>
 </head>
 <body class="dotted-bg">
     <div id="tbg"></div>
@@ -36,8 +36,8 @@
                     </div>
                     <div class="window" windowId="pauseMenu">
                         <div class="button-list">
-                            <button class="coolBtn" onclick="pause()">Resume</button>
-                            <button class="coolBtn" onclick="openWindow('shop')">Shop</button>
+                            <button class="coolBtn" onclick="exitWindow()">Resume</button>
+                            <button class="coolBtn" onclick="openWindow('shopMenu')">Shop</button>
                         </div>
                     </div>
                     <div class="window" windowId="shopMenu">
