Updated all 1.2.0 files

--- a/versions/v1_2_0/index.html
+++ b/versions/v1_2_0/index.html
@@ -41,7 +41,8 @@
                         </div>
                     </div>
                     <div class="window" windowId="shopMenu">
-
+                        <div id="upgrades"></div>
+                        <button class="coolBtn" onclick="exitWindow()">Return</button>
                     </div>
                 </div>
             </div>
@@ -65,7 +66,7 @@
         <div class="panel">
             <button class="coolBtn" onclick="reset()">Reset (R)</button>
             <button class="coolBtn" onclick="pause()">Pause (P)</button>
-            <button class="coolBtn" onclick="toggleGravity()">Toggle gravity (G)</button>
+            <!-- <button class="coolBtn" onclick="toggleGravity()">Toggle gravity (G)</button> -->
             <button class="coolBtn" onclick="toggleEditor()">Editor (E)</button>
         </div>
     </div>
