Split up script.js file for easier analyzing

--- a/versions/v1_2_1/index.html
+++ b/versions/v1_2_1/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="Vector.js" defer></script>
+    <script src="Player.js" defer></script>
+    <script src="Zone.js" defer></script>
+    <script src="Coin.js" defer></script>
+    <script src="Dialog.js" defer></script>
+    <script src="Platform.js" defer></script>
+    <script src="Checkpoint.js" defer></script>
+    <script src="Bouncepad.js" defer></script>
+    <script src="Editor.js" defer></script>
+    <script src="Game.js" defer></script>
+    <script src="UI.js" defer></script>
     <script src="script.js" defer></script>
-    <title>Animation v1.2.0</title>
+    <title>Animation v1.2.1</title>
 </head>
 <body class="dotted-bg">
     <div id="tbg"></div>
