--- a/versions/v2_0_0/index.html
+++ b/versions/v2_0_0/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../../src/tab.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <title>JMP v2</title>
+    <title>Game</title>
 </head>
 <body class="dotted-bg">
     <button class="fs" onclick="goFullscreen()"></button>
